2025-08 Feature Update for Version Next (5.0.0)

--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content>
-       <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="description" content>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
@@ -16,7 +16,7 @@
 
     <link rel="icon" href="./img/core-img/favicon.png">
 
-     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.7.2/css/all.css">
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-breakpoints.css">
@@ -54,9 +54,9 @@
         <nav class="navbar navbar-mobile">
             <a href="./index.html" class="nav-item">Home</a>
             <a href="./about.html" class="nav-item">About</a>
-            <a href="./works-by-nrfz.html" class="nav-item">Works By NRFZ</a>
-            <a href="eicw/eicw.html" class="nav-item">EICW</a>
-            <a href="#" class="nav-item active">Blog</a>
+            <a href="./openbve.html" class="nav-item">OpenBVE</a>
+            <a href="./omsi-2.html" class="nav-item">OMSI 2</a>
+            <a href="./blog.html" class="nav-item active">Blog</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
                     <i class="fa-solid fa-moon-stars" id="theme-icon"></i>
@@ -66,7 +66,7 @@
     </header>
 
 
-    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
+    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img" id="cv-about"
         style="background-image: url(img/bg-img/hero-bg-small.png); height: 100vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
@@ -87,7 +87,7 @@
                                         </li>
                                     </ol>
                                 </nav>
-                                <h1 class="brc">My Blogs</h1>
+                                <h1 class="brc">Our Blogs</h1>
                             </div>
                         </div>
                     </div>
@@ -134,23 +134,23 @@
             </div>
             <div class="row pw-portfolio">
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                data-date="2025-06-01">
-                <div class="single-portfolio-content">
-                    <img src="https://i.imgur.com/753URzQ.png" alt>
-                    <div class="hover-content-blog">
-                        <h4>Personal Version 5.0 - Iterations & AI</h4>
-                        <a class="read" href="blog/personal-v5-0.html" class="portfolio-img"><i
-                                class="fa-solid fa-arrow-right"></i></a>
+                    data-date="2025-12-06">
+                    <div class="single-portfolio-content">
+                        <img src="img/blog/ael-ys.png" alt>
+                        <div class="hover-content-blog">
+                            <h4>Release of Airport Express Line & Yishun LRT 2.0</h4>
+                            <a class="read" href="blog/ael-ys.html" class="portfolio-img"><i
+                                    class="fa-solid fa-arrow-right"></i></a>
+                        </div>
                     </div>
                 </div>
-            </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-10-12">
+                    data-date="2024-12-05">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/2XiV79F.png" alt>
+                        <img src="img/blog/hcrt5a.png" alt>
                         <div class="hover-content-blog">
-                            <h4>Personal Version 4.4 - Optimizations Galore</h4>
+                            <h4>Harbourvale City - a history</h4>
                             <a class="read" href="blog/personal-v4-3.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
@@ -158,11 +158,11 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-10-12">
+                    data-date="2024-11-03">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/lsSie7o.png" alt>
+                        <img src="img/blog/hbltrain-line.png" alt>
                         <div class="hover-content-blog">
-                            <h4>If you can't beat them, join them</h4>
+                            <h4>Cumulative Updates - 03/11/24</h4>
                             <a class="read" href="blog/wayfind-2.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
@@ -170,24 +170,12 @@
                 </div>
 
                 <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wbd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-09-01">
+                    data-date="2024-09-15">
                     <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/f84Pcxo.png" alt>
+                        <img src="img/blog/hbltrain-line.png" alt>
                         <div class="hover-content-blog">
-                            <h4>Personal V4 - A big redesign</h4>
+                            <h4>Release of Retrofitted Harbourvale Line & Trains</h4>
                             <a class="read" href="blog/personal-v4-1.html" class="portfolio-img"><i
-                                    class="fa-solid fa-arrow-right"></i></a>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item wfd mb-30 wow fadeInUp" data-wow-delay="100ms"
-                    data-date="2024-06-30">
-                    <div class="single-portfolio-content">
-                        <img src="https://i.imgur.com/JFAxwwd.png" alt>
-                        <div class="hover-content-blog">
-                            <h4>New Wayfinding System - How has it been so far?</h4>
-                            <a class="read" href="blog/wayfind.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -201,18 +189,14 @@
             <div class="footer-content d-flex flex-column align-items-center text-center">
                 <!-- Social Links -->
                 <div class="social-info">
-                    <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
-                            aria-hidden="true"></i></a>
-                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
                     <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                    <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
                             aria-hidden="true"></i></a>
                 </div>
                 <!-- Copywrite Text -->
                 <div class="copywrite-text">
                     <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
+                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
                     </p>
                 </div>
             </div>
@@ -224,7 +208,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-    <script src="js/theme-subPages.js"></script>
+    <script src="js/theme-aboutPage.js"></script>
 
     <script src="js/jquery.min.js"></script>
 
