--- a/omsi-2.html
+++ b/omsi-2.html
@@ -71,7 +71,7 @@
   </header>
 
 
-  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-omsi2"
+  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img" id="cv-omsi2"
     style="background-image: url(img/bg-img/hero-bg-omsi2.jpg); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
