2025-08 Feature Update for Version Next (5.0.0)

--- a/blog.html
+++ b/blog.html
@@ -151,7 +151,7 @@
                         <img src="img/blog/hcrt5a.png" alt>
                         <div class="hover-content-blog">
                             <h4>Harbourvale City - a history</h4>
-                            <a class="read" href="blog/personal-v4-3.html" class="portfolio-img"><i
+                            <a class="read" href="blog/harbourvale-city-a-hist.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                         <img src="img/blog/hbltrain-line.png" alt>
                         <div class="hover-content-blog">
                             <h4>Cumulative Updates - 03/11/24</h4>
-                            <a class="read" href="blog/wayfind-2.html" class="portfolio-img"><i
+                            <a class="read" href="blog/cumulative-update-03-11.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -175,7 +175,7 @@
                         <img src="img/blog/hbltrain-line.png" alt>
                         <div class="hover-content-blog">
                             <h4>Release of Retrofitted Harbourvale Line & Trains</h4>
-                            <a class="read" href="blog/personal-v4-1.html" class="portfolio-img"><i
+                            <a class="read" href="blog/hlbf-t.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
