2025-08 Feature Update for Version Next (5.0.0)

--- a/omsi-2.html
+++ b/omsi-2.html
@@ -146,7 +146,7 @@
             <h2 class="accordion-header" id="headingGetStarted">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseGetStarted" aria-expanded="false" aria-controls="collapseGetStarted">
-                <i class="fa-solid fa-download"></i>&nbsp;&nbsp;<h2 class="accordion-header">Get Started</h2>
+                <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Get Started
               </button>
             </h2>
             <div id="collapseGetStarted" class="accordion-collapse collapse" aria-labelledby="headingGetStarted"
@@ -196,7 +196,7 @@
             <h2 class="accordion-header" id="headingIGT">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGT" aria-expanded="false" aria-controls="collapseIGT">
-                <i class="fa-solid fa-train-subway"></i>&nbsp;&nbsp;<h2 class="accordion-header">Install Guide - Modified Buses/Maps</h2>
+                <i class="fa-solid fa-train-subway"></i>&nbsp;&nbsp;Install Guide - Modified Buses/Maps
               </button>
             </h2>
 
@@ -294,7 +294,7 @@
               <img src="img/releases-ss/su18.png" alt="su18">
               <div class="hover-content-blog">
                 <h4>Solaris Urbino 18</h4>
-                <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
+                <a class="info" href="releases/solaris-urbino-18.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -306,7 +306,7 @@
               <img src="img/releases-ss/vdl.png" alt="vdl">
               <div class="hover-content-blog">
                 <h4>VDL Citea LLE</h4>
-                <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
+                <a class="info" href="releases/vdl-clle.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -330,7 +330,7 @@
               <img src="img/releases-ss/jw.png" alt="jw">
               <div class="hover-content-blog">
                 <h4>SMRT JW B9TL Ad</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/smrt-jw-b9tl.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
