--- a/openbve.html
+++ b/openbve.html
@@ -139,7 +139,7 @@
             <h2 class="accordion-header" id="headingGetStarted">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseGetStarted" aria-expanded="false" aria-controls="collapseGetStarted">
-                <i class="fa-solid fa-download"></i>&nbsp;&nbsp;<h2 class="accordion-header">Get Started</h2>
+                <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Get Started
               </button>
             </h2>
             <div id="collapseGetStarted" class="accordion-collapse collapse" aria-labelledby="headingGetStarted"
@@ -205,8 +205,8 @@
             <h2 class="accordion-header" id="headingIGT">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGT" aria-expanded="false" aria-controls="collapseIGT">
-                <i class="fa-solid fa-train-subway"></i>&nbsp;&nbsp;<h2 class="accordion-header">Install Guide -
-                  Modified Trains</h2>
+                <i class="fa-solid fa-train-subway"></i>&nbsp;&nbsp;Install Guide -
+                  Modified Trains
               </button>
             </h2>
             <div id="collapseIGT" class="accordion-collapse collapse" aria-labelledby="headingIGT"
@@ -279,8 +279,8 @@
             <h2 class="accordion-header" id="headingIGT">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGR" aria-expanded="false" aria-controls="collapseIGR">
-                <i class="fa-solid fa-route"></i>&nbsp;&nbsp;<h2 class="accordion-header">Install Guide - Modified
-                  Routes</h2>
+                <i class="fa-solid fa-route"></i>&nbsp;&nbsp;Install Guide - Modified
+                  Routes
               </button>
             </h2>
             <div id="collapseIGR" class="accordion-collapse collapse" aria-labelledby="headingThree"
