--- a/releases/smrt-jw-b9tl.html
+++ b/releases/smrt-jw-b9tl.html
@@ -8,7 +8,7 @@
   <meta name="google-site-verification" content="57TuruPNu5wqSSia_cUehl5t9Gh1AbxrHNPcMiFx-aQ" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>OMSI 2 Developer Files | SMRTO</title>
+  <title>SMRT JW B9TL Ad | SMRTO</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -69,7 +69,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-tdc"
-    style="background-image: url(../img/releases-ss/dfC.jpg); height: 100vh;">
+    style="background-image: url(../img/releases-ss/jw5.jpg); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -81,12 +81,12 @@
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="../omsi-2.html"> OMSI 2</a>
                     </li>
-                    <li class="breadcrumb-item active"><a href="#">Developer Files
+                    <li class="breadcrumb-item active"><a href="#">Buses
                       </a>
                     </li>
                   </ol>
                 </nav>
-                <h1 class="brc">OMSI 2 Developer Files</h1>
+                <h1 class="brc">SMRT JW B9TL Ad</h1>
               </div>
             </div>
           </div>
@@ -101,16 +101,17 @@
           <div class="details_catagory_wrap">
             <div class="col-sm-4 single_catagory ">
               <span>Developers</span>
+              <h4><i class="fa-solid fa-circle-user"></i> GX7767 Studios</h4>
               <h4><i class="fa-solid fa-circle-user"></i> SMRTO Studios</h4>
             </div>
 
             <div class="col-sm-4 single_catagory">
               <span>Share Project</span>
               <div class="social_links">
-                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/omsi-developer-files.html"
+                <a href="https://www.facebook.com/sharer/sharer.php?u=https://smrtosg.github.io/main/releases/smrt-jw-b9tl.html"
                   title="Facebook">
                   <i class="fa-brands fa-facebook"></i> </a>
-                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/omsi-developer-files.html&text=OMSI 2 Developer Files"
+                <a href="https://x.com/intent/post?url=https://smrtosg.github.io/main/releases/smrt-jw-b9tl.html&text=SMRT JW B9TL Ad"
                   title="X (Twitter)">
                   <i class="fa-brands fa-x-twitter"></i></a>
                 <a href="#" class="clipboard" onclick="copyToClipboard()" title="Copy Link"><i
@@ -123,7 +124,7 @@
         </div>
       </div>
     </div>
-    <div style="background-color: #a33a3a; width: 100%; height: 10px;"></div>
+    <div style="background-color: #6ac144; width: 100%; height: 10px;"></div>
   </section>
 
 
@@ -137,9 +138,9 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">Facing issues? You can try and download the
-                      Developer's copy of Fonts, Sceneryobjects, Splines folder and the K++ Scripts and then see if the
-                      problems are solved.</p>
+                    <p style="text-align: center; padding-bottom: 2em;">The SMRT JW B9TL Ad is the standard city bus
+                      from
+                      Solaris Bus & Coach S.A. Poland.</p>
                   </div>
                 </div>
               </div>
@@ -147,20 +148,38 @@
           </div>
         </div>
 
+        <div class="banner text-center wow fadeInUp" data-wow-delay="150ms">
+          <a href="../img/releases-ss/jw5.jpg" class="portfolio-img"><img src="../img/releases-ss/jw5.jpg"
+              class="img-fluid" alt="JW-5"></a>
+        </div>
 
         <div class="details_single_img wow fadeInUp" data-wow-delay="150ms">
           <div class="row">
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/dfA.png" class="portfolio-img" id="dfA" alt="dfA"><img
-                    src="../img/releases-ss/dfA.png" class="img-fluid" id="dfA-img" alt="dfA-img"></a>
+                <a href="../img/releases-ss/jw1.jpg" class="portfolio-img"><img src="../img/releases-ss/jw1.jpg"
+                    class="img-fluid" alt="JW-1"></a>
               </div>
             </div>
 
             <div class="col-lg-6 col-md-6">
               <div class="thumb">
-                <a href="../img/releases-ss/dfB.jpg" class="portfolio-img" id="dfB" alt="dfB"><img
-                    src="../img/releases-ss/dfB.jpg" class="img-fluid" id="dfB-img" alt="dfB-img"></a>
+                <a href="../img/releases-ss/jw2.jpg" class="portfolio-img"><img src="../img/releases-ss/jw2.jpg"
+                    class="img-fluid" alt="JW-2"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6">
+              <div class="thumb">
+                <a href="../img/releases-ss/jw3.jpg" class="portfolio-img"><img src="../img/releases-ss/jw3.jpg"
+                    class="img-fluid" alt="JW-3"></a>
+              </div>
+            </div>
+
+            <div class="col-lg-6 col-md-6">
+              <div class="thumb">
+                <a href="../img/releases-ss/jw4.jpg" class="portfolio-img"><img src="../img/releases-ss/jw4.jpg"
+                    class="img-fluid" alt="JW-4"></a>
               </div>
             </div>
           </div>
@@ -169,47 +188,37 @@
     </div>
 
     <!-- Downloads -->
-    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="300ms">
+    <div class="about-me-stations text-center mb-80 wow fadeInUp" data-wow-delay="900ms">
 
-      <div class="alert alert-danger wow fadeInUp" data-wow-delay="300ms" role="alert"
+      <div class="alert alert-primary wow fadeInUp" data-wow-delay="900ms" role="alert"
         style="margin-top: 1em; cursor: default; font-size: 14px;">
-        Make a backup of these first before overwriting. We will not be liable for any problems occurring.
+        Download the Original Base Bus <a href="https://gx7767.wixsite.com/studio/kmb-avbwu"><b>here</b></a>
+        before
+        downloading the Bus.
       </div>
 
       <h3 class="ld-s-title"><i class="fa-solid fa-download"></i>&nbsp;Modifications</h3>
       <div class="row justify-content-center">
 
-        <div class="accordion" id="accordMods">
+        <div class="accordion" id="accordTrains">
 
           <div class="accordion-item">
             <h2 class="accordion-header " id="heading1.0">
               <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1.0"
                 aria-expanded="true" aria-controls="collapse1.0">
-                <b>Version 1.0 - 25/03/24</b>
+                <b>Version 1.0 - 20/09/24</b>
               </button>
             </h2>
             <div id="collapse1.0" class="accordion-collapse collapse show" aria-labelledby="heading1.0"
-              data-bs-parent="#accordMods">
+              data-bs-parent="#accordTrains">
               <div class="accordion-body">
                 <h3 class="changelog">
                   - Initial Release
-                </h3><br><br>
+                </h3> <br><br>
 
-                <a href="https://github.com/smrtgVirtual/Hillgrove-Woodlands-Town/releases/download/v3.0-BETA1/Fonts-Humans.7z"
+                <a href="https://github.com/smrtosg/main/releases/download/v110924/SMRT.JW_B9TL.7z"
                   class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Fonts/Humans Files</a>
-
-                <a href="https://mega.nz/file/YRUhmRJR#XpKhE1t7hSa16XtK6llX6BmmEhcIPI1haKnSJT1q9b4"
-                  class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;Sceneryobjects Files</a>
-
-                <a href="https://mega.nz/file/tJUwQIZR#rkxL9yS9lrrS6dPCD7MsbAg2K9ELWVmxQh_KBELpPm4"
-                  class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;Splines Files</a>
-
-                <a href="https://mega.nz/file/RIcymA5T#msKbuxNnYe3Si5VNSZuKk1rZibpc9Ju4RrIRIn1k_5I"
-                  class="btn pw-btn btn-2 mt-15" target="_blank">
-                  <i class="fa-solid fa-external-link"></i>&nbsp;&nbsp;K++ Files</a>
+                  <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Repaints</a>
               </div>
             </div>
           </div>
