2025-08 Feature Update for Version Next (5.0.0)

--- a/openbve.html
+++ b/openbve.html
@@ -383,12 +383,12 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-year="2025" data-date="25-08">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/hbl.png" alt="hbl">
               <div class="hover-content-blog">
                 <h4>Harbourvale Line</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/harbourvale-line.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
