--- a/releases/smrt-jw-b9tl.html
+++ b/releases/smrt-jw-b9tl.html
@@ -138,9 +138,8 @@
               <div class="row justify-content-center">
                 <div class="col-lg-12">
                   <div class="info justify-content-center">
-                    <p style="text-align: center; padding-bottom: 2em;">The SMRT JW B9TL Ad is the standard city bus
-                      from
-                      Solaris Bus & Coach S.A. Poland.</p>
+                    <p style="text-align: center; padding-bottom: 2em;">Advertisement for SMRT's Jurong West Bus Package
+                      Promotion for the Wright B9TL bus (GX7767 Studio's Bus only).</p>
                   </div>
                 </div>
               </div>
