2025-08 Feature Update for Version Next (5.0.0)

--- a/openbve.html
+++ b/openbve.html
@@ -82,9 +82,9 @@
               <div class="main-title">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
+                    <li class="breadcrumb-item"><a href="./index.html"> Home</a>
                     </li>
-                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html">
+                    <li class="breadcrumb-item active"><a href="#">
                         OpenBVE
                       </a>
                     </li>
@@ -206,7 +206,7 @@
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGT" aria-expanded="false" aria-controls="collapseIGT">
                 <i class="fa-solid fa-train-subway"></i>&nbsp;&nbsp;Install Guide -
-                  Modified Trains
+                Modified Trains
               </button>
             </h2>
             <div id="collapseIGT" class="accordion-collapse collapse" aria-labelledby="headingIGT"
@@ -280,7 +280,7 @@
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGR" aria-expanded="false" aria-controls="collapseIGR">
                 <i class="fa-solid fa-route"></i>&nbsp;&nbsp;Install Guide - Modified
-                  Routes
+                Routes
               </button>
             </h2>
             <div id="collapseIGR" class="accordion-collapse collapse" aria-labelledby="headingThree"
@@ -323,7 +323,7 @@
 
         <div class="row pw-portfolio">
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item df tr mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2025" data-date="25-01">
+            data-date="2025-01-24">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/devfile-op.png" alt="dfop">
               <div class="hover-content-blog align-items-center">
@@ -335,7 +335,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2025" data-date="25-08">
+            data-date="2025-08-10">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/nwl2.0.png" alt="nwl2.0">
               <div class="hover-content-blog">
@@ -347,7 +347,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2025" data-date="25-08">
+            data-date="2025-08-10">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ael2.0.png" alt="ael2.0">
               <div class="hover-content-blog">
@@ -359,7 +359,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-year="2024">
+            data-date="2024-12-06">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ryl150.png" alt="ryl150">
               <div class="hover-content-blog">
@@ -371,7 +371,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-12-09">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ys2.0.png" alt="ys2.0">
               <div class="hover-content-blog">
@@ -383,7 +383,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2025" data-date="25-08">
+            data-date="2025-08-11">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/hbl.png" alt="hbl">
               <div class="hover-content-blog">
@@ -395,7 +395,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-09-11">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/cgl.png" alt="cgl">
               <div class="hover-content-blog">
@@ -407,7 +407,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-12-21">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/r151.png" alt="r151">
               <div class="hover-content-blog">
@@ -419,7 +419,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-12-21">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/c151c.png" alt="c151c">
               <div class="hover-content-blog">
@@ -431,7 +431,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-12-21">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/c151b.png" alt="c151b">
               <div class="hover-content-blog">
@@ -443,7 +443,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-12-21">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/c151a.png" alt="c151a">
               <div class="hover-content-blog">
@@ -455,7 +455,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr leg mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-03-17">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/yl150.png" alt="yl150">
               <div class="hover-content-blog">
@@ -467,7 +467,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr leg mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-year="2024">
+            data-date="2024-11-03">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/hbll.png" alt="yl150">
               <div class="hover-content-blog">
@@ -484,24 +484,23 @@
 
   </section>
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
-                    </p>
-                </div>
-            </div>
+  <footer class="footer-area">
+    <div class="container">
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info">
+          <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
         </div>
-    </footer>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script type="text/javascript" id="cookiebanner" src="js/cookies-banner.js" data-position="bottom" data-bg="#f2f3e5"
     data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
@@ -524,6 +523,8 @@
 
   <script src="js/glightbox.min.js"></script>
 
+  <script src="js/imagesloaded.pkgd.min.js"></script>
+
   <script src="js/isotope.pkgd.min.js"></script>
 
   <script src="js/portFunct.js"></script>
@@ -531,6 +532,7 @@
   <script src="js/copy-to-clipboard.js"></script>
 
   <script src="js/preloader.js"></script>
+
 
 </body>
 
