--- a/omsi-2.html
+++ b/omsi-2.html
@@ -82,9 +82,9 @@
               <div class="main-title">
                 <nav aria-label="breadcrumb">
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="https://nurafianzulkifli.com/index.html"> Home</a>
+                    <li class="breadcrumb-item"><a href="./index.html"> Home</a>
                     </li>
-                    <li class="breadcrumb-item active"><a href="https://nurafianzulkifli.com/works-by-nrfz.html"> OMSI 2
+                    <li class="breadcrumb-item active"><a href="#"> OMSI 2
                       </a>
                     </li>
                   </ol>
@@ -265,7 +265,7 @@
 
         <div class="row pw-portfolio">
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-date="2024-12">
+            data-date="2024-12-25">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/ht.png" alt="ht">
               <div class="hover-content-blog align-items-center">
@@ -277,7 +277,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-date="2024-03">
+            data-date="2024-03-25">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/wt.png" alt="wt">
               <div class="hover-content-blog">
@@ -289,7 +289,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-date="2024-09">
+            data-date="2024-09-15">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/su18.png" alt="su18">
               <div class="hover-content-blog">
@@ -301,7 +301,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs mb-30 wow fadeInUp" data-wow-delay="100ms"
-            data-date="2024-03">
+            data-date="2024-09-15">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/vdl.png" alt="vdl">
               <div class="hover-content-blog">
@@ -313,7 +313,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item df mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-date="2024-03">
+            data-date="2024-03-25">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/dfA.png" alt="dfom">
               <div class="hover-content-blog">
@@ -325,7 +325,7 @@
           </div>
 
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs rp mb-30 wow fadeInUp" data-wow-delay="300ms"
-            data-date="2024-09">
+            data-date="2024-09-20">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/jw.png" alt="jw">
               <div class="hover-content-blog">
