2025-08 Feature Update for Version Next (5.0.0)

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
         </div>
     </section>
 
-    <div class="pw-portfolio-area section-padding-80 clearfix" id="featured">
+    <div class="pw-portfolio-area clearfix" id="featured">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
@@ -283,7 +283,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
+                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="300ms"
                     data-year="2024">
                     <div class="single-portfolio-content">
                         <img src="img/releases-ss/devfile-opA.png" alt="tdc-v3">
