2025-08 Feature Update for Version Next (5.0.0)

--- a/openbve.html
+++ b/openbve.html
@@ -139,7 +139,7 @@
             <h2 class="accordion-header" id="headingGetStarted">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseGetStarted" aria-expanded="false" aria-controls="collapseGetStarted">
-                <i class="fa-solid fa-download"></i>&nbsp;&nbsp;Get Started
+                <i class="fa-solid fa-download"></i>Get Started
               </button>
             </h2>
             <div id="collapseGetStarted" class="accordion-collapse collapse" aria-labelledby="headingGetStarted"
@@ -205,7 +205,7 @@
             <h2 class="accordion-header" id="headingIGT">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGT" aria-expanded="false" aria-controls="collapseIGT">
-                <i class="fa-solid fa-train-subway"></i>&nbsp;&nbsp;Install Guide -
+                <i class="fa-solid fa-train-subway"></i>Install Guide -
                 Modified Trains
               </button>
             </h2>
@@ -279,7 +279,7 @@
             <h2 class="accordion-header" id="headingIGT">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGR" aria-expanded="false" aria-controls="collapseIGR">
-                <i class="fa-solid fa-route"></i>&nbsp;&nbsp;Install Guide - Modified
+                <i class="fa-solid fa-route"></i>Install Guide - Modified
                 Routes
               </button>
             </h2>
@@ -364,7 +364,7 @@
               <img src="img/releases-ss/ryl150.png" alt="ryl150">
               <div class="hover-content-blog">
                 <h4>Alstom Movia RYL150</h4>
-                <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
+                <a class="info" href="releases/ryl150.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -376,7 +376,7 @@
               <img src="img/releases-ss/ys2.0.png" alt="ys2.0">
               <div class="hover-content-blog">
                 <h4>Yishun LRT</h4>
-                <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
+                <a class="info" href="releases/yishun-lrt.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
