--- a/releases/harbourvale-line.html
+++ b/releases/harbourvale-line.html
@@ -101,7 +101,7 @@
           <div class="details_catagory_wrap">
             <div class="col-sm-4 single_catagory ">
               <span>Developers</span>
-              <h4><i class="fa-solid fa-circle-user"></i> Nickgoh45 &nbsp;</h4>
+              <h4><i class="fa-solid fa-circle-user"></i> Nickgoh45</h4>
               <h4><i class="fa-solid fa-circle-user"></i> SMRTO Studios</h4>
             </div>
             <div class="col-sm-4 single_catagory">
