--- a/about.html
+++ b/about.html
@@ -243,19 +243,19 @@
             </div>
             <div class="row pw-portfolio">
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
+                <div class="col-12 col-sm-6 col-lg-4 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-year="2025">
                     <div class="single-portfolio-content">
                         <img src="img/releases-ss/nlc-sd.jpg" alt>
                         <div class="hover-content-blog">
                             <h4>Single Decker Buses</h4>
-                            <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                            <a class="info" href="info/sd-bus.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
+                <div class="col-12 col-sm-6 col-lg-4 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
                     data-year="2024">
                     <div class="single-portfolio-content">
                         <img src="img/releases-ss/nlc-bb.jpg" alt="tdc-v3">
@@ -267,7 +267,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="500ms"
+                <div class="col-12 col-sm-6 col-lg-4 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="500ms"
                     data-year="2022">
                     <div class="single-portfolio-content">
                         <img src="img/releases-ss/b5lh-dd.jpg" alt="bus-rep">
