2025-08 Feature Update for Version Next (5.0.0)

--- a/info/sd-bus.html
+++ b/info/sd-bus.html
@@ -127,29 +127,108 @@
   </section>
 
 
-  <!-- Fleet List Tabs -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h3>Reports</h3>
 
+        <div class="tabbable-panel">
+          <div class="tabbable-line">
+            <ul class="nav nav-tabs ">
+              <li class="active">
+                <a href="#tab_default_1" data-toggle="tab">
+                  Company or Individual </a>
+              </li>
+              <li>
+                <a href="#tab_default_2" data-toggle="tab">
+                  Report title & Category </a>
+              </li>
+              <li>
+                <a href="#tab_default_3" data-toggle="tab">
+                  Your Reports </a>
+              </li>
+              <li>
+                <a href="#tab_default_4" data-toggle="tab">
+                  Documents </a>
+              </li>
+              <li>
+                <a href="#tab_default_5" data-toggle="tab">
+                  T&C </a>
+              </li>
+            </ul>
 
+            
+            <div class="tab-content">
+              <div class="tab-pane active" id="tab_default_1">
+                <p>
+                  Tab 1.
+                </p>
+                <p>
+                  lorem
+                </p>
+              </div>
+              <div class="tab-pane" id="tab_default_2">
+                <p>
+                  Tab 2.
+                </p>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </p>
 
+              </div>
+              <div class="tab-pane" id="tab_default_3">
+                <p>
+                  Tab 3.
+                </p>
+                <p>
+                  Consectetur deleniti quisquam natus eius commodi.
+                </p>
 
-    <footer class="footer-area">
-        <div class="container">
-            <div class="footer-content d-flex flex-column align-items-center text-center">
-                <!-- Social Links -->
-                <div class="social-info">
-                    <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
-                    <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                </div>
-                <!-- Copywrite Text -->
-                <div class="copywrite-text">
-                    <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
-                    </p>
-                </div>
+              </div>
+              <div class="tab-pane" id="tab_default_4">
+                <p>
+                  Tab 4.
+                </p>
+                <p>
+                  Consectetur deleniti quisquam natus eius commodi.
+                </p>
+
+              </div>
+              <div class="tab-pane" id="tab_default_5">
+                <p>
+                  Tab 5.
+                </p>
+                <p>
+                  Consectetur deleniti quisquam natus eius commodi.
+                </p>
+
+              </div>
             </div>
+          </div>
         </div>
-    </footer>
+
+      </div>
+    </div>
+  </div>
+
+
+  <footer class="footer-area">
+    <div class="container">
+      <div class="footer-content d-flex flex-column align-items-center text-center">
+        <!-- Social Links -->
+        <div class="social-info">
+          <a href="https://www.youtube.com/@SMRTOsg"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
+          <a href="https://www.facebook.com/SMRTVRT"><i class="fa-brands fa-facebook" aria-hidden="true"></i></a>
+        </div>
+        <!-- Copywrite Text -->
+        <div class="copywrite-text">
+          <p>&copy;
+            <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script type="text/javascript" id="cookiebanner" src="../js/cookies-banner.js" data-position="bottom"
     data-bg="#f2f3e5" data-fg="#000" data-font-family="Onest, sans-serif" data-zindex="12345111111"
@@ -227,7 +306,7 @@
 
   </script>
 
-    <script>
+  <script>
     function sortTable(n, tableId) {
       var table, rows, switching, i, x, y, shouldSwitch, dir, switchcount = 0;
       table = document.getElementById(tableId);
