--- a/info/sd-bus.html
+++ b/info/sd-bus.html
@@ -127,89 +127,145 @@
   </section>
 
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-        <h3>Reports</h3>
-
-        <div class="tabbable-panel">
-          <div class="tabbable-line">
-            <ul class="nav nav-tabs ">
-              <li class="active">
-                <a href="#tab_default_1" data-toggle="tab">
-                  Company or Individual </a>
-              </li>
-              <li>
-                <a href="#tab_default_2" data-toggle="tab">
-                  Report title & Category </a>
-              </li>
-              <li>
-                <a href="#tab_default_3" data-toggle="tab">
-                  Your Reports </a>
-              </li>
-              <li>
-                <a href="#tab_default_4" data-toggle="tab">
-                  Documents </a>
-              </li>
-              <li>
-                <a href="#tab_default_5" data-toggle="tab">
-                  T&C </a>
-              </li>
-            </ul>
-
-            
-            <div class="tab-content">
-              <div class="tab-pane active" id="tab_default_1">
-                <p>
-                  Tab 1.
-                </p>
-                <p>
-                  lorem
-                </p>
-              </div>
-              <div class="tab-pane" id="tab_default_2">
-                <p>
-                  Tab 2.
-                </p>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                </p>
-
-              </div>
-              <div class="tab-pane" id="tab_default_3">
-                <p>
-                  Tab 3.
-                </p>
-                <p>
-                  Consectetur deleniti quisquam natus eius commodi.
-                </p>
-
-              </div>
-              <div class="tab-pane" id="tab_default_4">
-                <p>
-                  Tab 4.
-                </p>
-                <p>
-                  Consectetur deleniti quisquam natus eius commodi.
-                </p>
-
-              </div>
-              <div class="tab-pane" id="tab_default_5">
-                <p>
-                  Tab 5.
-                </p>
-                <p>
-                  Consectetur deleniti quisquam natus eius commodi.
-                </p>
-
-              </div>
-            </div>
-          </div>
-        </div>
-
+<div class="container my-5">
+  <h2 class="mb-4">Bus Fleet Analytics</h2>
+  <ul class="nav nav-tabs" id="fleetAnalyticsTabs" role="tablist">
+    <li class="nav-item" role="presentation">
+      <button class="nav-link active" id="overview-tab" data-bs-toggle="tab" data-bs-target="#overview" type="button" role="tab" aria-controls="overview" aria-selected="true">
+        Fleet Overview
+      </button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="maintenance-tab" data-bs-toggle="tab" data-bs-target="#maintenance" type="button" role="tab" aria-controls="maintenance" aria-selected="false">
+        Maintenance Schedule
+      </button>
+    </li>
+    <li class="nav-item" role="presentation">
+      <button class="nav-link" id="fuel-tab" data-bs-toggle="tab" data-bs-target="#fuel" type="button" role="tab" aria-controls="fuel" aria-selected="false">
+        Fuel Efficiency
+      </button>
+    </li>
+  </ul>
+  <div class="tab-content" id="fleetAnalyticsTabsContent">
+    <!-- Fleet Overview Tab -->
+    <div class="tab-pane fade show active" id="overview" role="tabpanel" aria-labelledby="overview-tab">
+      <div class="table-responsive mt-4">
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Bus ID</th>
+              <th>Model</th>
+              <th>Year</th>
+              <th>Status</th>
+              <th>Depot</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>SD101</td>
+              <td>Volvo B9TL</td>
+              <td>2018</td>
+              <td>Active</td>
+              <td>North</td>
+            </tr>
+            <tr>
+              <td>SD102</td>
+              <td>MAN A22</td>
+              <td>2019</td>
+              <td>Active</td>
+              <td>East</td>
+            </tr>
+            <tr>
+              <td>SD103</td>
+              <td>Mercedes Citaro</td>
+              <td>2017</td>
+              <td>Under Repair</td>
+              <td>West</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- Maintenance Schedule Tab -->
+    <div class="tab-pane fade" id="maintenance" role="tabpanel" aria-labelledby="maintenance-tab">
+      <div class="table-responsive mt-4">
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Bus ID</th>
+              <th>Last Service</th>
+              <th>Next Due</th>
+              <th>Service Type</th>
+              <th>Technician</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>SD101</td>
+              <td>2025-07-10</td>
+              <td>2025-10-10</td>
+              <td>Full</td>
+              <td>Alex Tan</td>
+            </tr>
+            <tr>
+              <td>SD102</td>
+              <td>2025-06-15</td>
+              <td>2025-09-15</td>
+              <td>Oil Change</td>
+              <td>Maria Lim</td>
+            </tr>
+            <tr>
+              <td>SD103</td>
+              <td>2025-05-20</td>
+              <td>2025-08-20</td>
+              <td>Brake Check</td>
+              <td>John Lee</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <!-- Fuel Efficiency Tab -->
+    <div class="tab-pane fade" id="fuel" role="tabpanel" aria-labelledby="fuel-tab">
+      <div class="table-responsive mt-4">
+        <table class="table table-striped table-bordered">
+          <thead>
+            <tr>
+              <th>Bus ID</th>
+              <th>Distance (km)</th>
+              <th>Fuel Used (L)</th>
+              <th>Efficiency (km/L)</th>
+              <th>Month</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>SD101</td>
+              <td>3200</td>
+              <td>400</td>
+              <td>8.0</td>
+              <td>July</td>
+            </tr>
+            <tr>
+              <td>SD102</td>
+              <td>2900</td>
+              <td>370</td>
+              <td>7.8</td>
+              <td>July</td>
+            </tr>
+            <tr>
+              <td>SD103</td>
+              <td>1500</td>
+              <td>200</td>
+              <td>7.5</td>
+              <td>July</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
+</div>
 
 
   <footer class="footer-area">
@@ -240,6 +296,8 @@
   <script src="../js/popper.min.js"></script>
 
   <script src="../js/bootstrap.min.js"></script>
+
+  <script src="../js/bootstrap.min.leg.js"></script>
 
   <script src="../js/pw.bundle.js"></script>
 
