--- a/info/sd-bus.html
+++ b/info/sd-bus.html
@@ -767,7 +767,7 @@
               <!-- Batch 1 -->
               <tr>
                 <td class="manu">Volvo</td>
-                <td class="model">B5LH</td>
+                <td class="model">7900H</td>
                 <td class="type">12m Single Deck</td>
                 <td class="cat">LHD</td>
                 <td class="dev">Aerosoft/Darius Bode</td>
