--- a/info/sd-bus.html
+++ b/info/sd-bus.html
@@ -57,8 +57,8 @@
     <nav class="navbar navbar-mobile">
       <a href="../index.html" class="nav-item">Home</a>
       <a href="../about.html" class="nav-item">About</a>
-      <a href="../openbve.html" class="nav-item active">OpenBVE</a>
-      <a href="../omsi-2.html" class="nav-item">OMSI 2</a>
+      <a href="../openbve.html" class="nav-item">OpenBVE</a>
+      <a href="../omsi-2.html" class="nav-item active">OMSI 2</a>
       <a href="../blog.html" class="nav-item">Blog</a>
       <a href="#" class="nav-item">
         <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
@@ -102,7 +102,7 @@
             <div class="portfolio-filter mt-3" id="busTab" role="tablist">
               <button class="btn" data-bs-toggle="tab" data-bs-target="#tab1">MAN A21</button>
               <button class="btn" data-bs-toggle="tab" data-bs-target="#tab2">MB Citaro C2</button>
-              <button class="btn" data-bs-toggle="tab" data-bs-target="#tab3">Volvo 7900</button>
+              <button class="btn" data-bs-toggle="tab" data-bs-target="#tab3">Volvo 7900H</button>
               <button class="btn" data-bs-toggle="tab" data-bs-target="#tab4">MB Citaro C1F</button>
               <button class="btn" data-bs-toggle="tab" data-bs-target="#tab5">VDL Citea 12LE</button>
               <button class="btn" data-bs-toggle="tab" data-bs-target="#tab6">MAN LI LE</button>
