2025-08 Feature Update for Version Next (5.0.0)

--- a/info/sd-bus.html
+++ b/info/sd-bus.html
@@ -1367,8 +1367,8 @@
           activatePane(target);
 
           // optionally scroll to content
-          const container = document.querySelector('.tab-content');
-          if (container) container.scrollIntoView({ behavior: 'smooth', block: 'start' });
+          //const container = document.querySelector('.tab-content');
+          //if (container) container.scrollIntoView({ behavior: 'smooth', block: 'start' });
         }, false);
       });
     });
