--- a/openbve.html
+++ b/openbve.html
@@ -448,7 +448,7 @@
               <img src="img/releases-ss/c151a.png" alt="c151a">
               <div class="hover-content-blog">
                 <h4>Kawasaki-CRRC Qingdao Sifang C151A</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/c151a.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -460,7 +460,7 @@
               <img src="img/releases-ss/yl150.png" alt="yl150">
               <div class="hover-content-blog">
                 <h4>Alstom (Bombardier) Movia YL150/A/B (Legacy)</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/yl150a-b.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -472,7 +472,7 @@
               <img src="img/releases-ss/hbll.png" alt="yl150">
               <div class="hover-content-blog">
                 <h4>C651/A/B/C/D (Legacy)</h4>
-                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                <a class="info" href="releases/c651s-leg.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
